# c_opengl_course

./: .gitignore  CMakeLists.txt  README.md
include/: Greeter.hpp
shaders/: basic.vert
src/: Greeter.cpp  main.cpp
tests/: test_greeter.cpp
